--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "scope": "pnpm scopeium -s \"rmcc-wrap\"",
     "prefix": "pnpm prefixium",
     "styles": "gulp style",
-    "scripts": "npx webpack --config-name uikit",
-    "build": "gulp style && npx webpack --config-name uikit",
+    "_scripts": "npx webpack --config-name uikit",
+    "_build": "gulp style && npx webpack --config-name uikit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "uikit": "^3.23.7"
+    "uikit": "^3.23.10"
   },
   "devDependencies": {
 
